src/objects/ADvendio__MediaCampaign__c.object
<CustomObject>
    <fields>
        <fullName>SomDig_AnzahlScreenshots__c</fullName>
        <description>Hilfsfeld für RollUp Summary (alle LI mit versendeten Screenshots, ausgenommen &apos;Non AdServer&apos; LIs)</description>
        <label>Anzahl Screenshots</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.Status_Screenshot__c</field>
            <operation>equals</operation>
            <value>versendet</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.SomDig_PositionStatus__c</field>
            <operation>notEqual</operation>
            <value>NonAdServer</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_BetreuerPam__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Welcher PAM-Mitarbeiter betreut diese Mediakampagne?</description>
        <inlineHelpText>Welcher PAM-Mitarbeiter betreut diese Mediakampagne?</inlineHelpText>
        <label>Campaign Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.ProfileId</field>
                <operation>equals</operation>
                <value>00eD0000001Qf2o</value>
            </filterItems>
            <filterItems>
                <field>User.P7S1_Sphere__c</field>
                <operation>equals</operation>
                <value>SomDe</value>
            </filterItems>
            <infoMessage>Wert ist nicht vorhanden bzw. stimmt nicht mit Filterkriterien überein: Der Benutzer muss aktiv sein und das Profil SomDig_PAM haben.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Betreuer_PAM_Mediakampagne</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_BetreuerSales__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Welcher Sales-Mitarbeiter betreut diese Mediakampagne?</description>
        <inlineHelpText>Welcher Sales-Mitarbeiter betreut diese Mediakampagne?</inlineHelpText>
        <label>Betreuer Sales</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2 AND 3</booleanFilter>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.Profile.Id</field>
                <operation>equals</operation>
                <value>00e20000001QBtU</value>
            </filterItems>
            <filterItems>
                <field>User.SomDig_SalesTeam__c</field>
                <operation>contains</operation>
                <value>Düsseldorf, Frankfurt, Hamburg, München, Berlin, ECC, RTA</value>
            </filterItems>
            <infoMessage>Wert ist nicht vorhanden bzw. stimmt nicht mit Filterkriterien überein: Der Benutzer muss aktiv sein, das Profil SomDig_Sales haben und einem Sales-Team zugeordnet sein.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Betreuer_Sales_Mediakampagne</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_BetreuerTeam__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Welches Team und welcher Vermarkter betreut die Mediakampagne im Buchungstool?</description>
        <inlineHelpText>Welches Team und welcher Vermarkter betreut die Mediakampagne im Buchungstool?</inlineHelpText>
        <label>Betreuer Team</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SomDig_BetreuerTeam__c.SomDig_TeamUngueltig__c</field>
                <operation>notEqual</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>SomDig_BetreuerTeam__c</referenceTo>
        <relationshipLabel>Mediakampagne</relationshipLabel>
        <relationshipName>Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Commitment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Commitment</label>
        <referenceTo>SomDig_Commitment__c</referenceTo>
        <relationshipLabel>Mediakampagnen</relationshipLabel>
        <relationshipName>Mediakampagnen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Commitmentbildend__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Z.Zt. nur informativ (manuelle Pflege durch Sales), keine Einbindung in Gen.prozess; zeigt ob die MK zu einem „Commitmend-Kunden“ zugeordnet ist, bzw. ob die Rabatte schon im Commitment abgestimmt sind. Wenn ja, sollen normalerweise KEINE weitere Rabatterhöhungen (weder an der MK noch auf LI)  möglich sein! (Die Ausnahmen bestätigen aber die Regel!:-)</description>
        <inlineHelpText>Bitte einkreuzen, wenn commitmentbildend</inlineHelpText>
        <label>Commitmentbildend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_ContractClosingDate__c</fullName>
        <description>Buchungs Time Stamp - wird per Workflow automatisch befüllt.</description>
        <inlineHelpText>Zeigt das Datum an, wann das Angebot auf &apos;Auftrag&apos; gesetzt wurde bzw. sich der Status von Angebot in Auftrag änderte. Wird für Reporting zwecke genutzt.</inlineHelpText>
        <label>ContractClosing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_CurrentUserProfile__c</fullName>
        <description>Für KV 02786. In diesem Feld steht der Profilname des aktuell eingeloggten Users. Wird in der Tabregel verwendet.</description>
        <formula>$Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current User</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_DebitorennrHelp__c</fullName>
        <description>Hilfsfeld, welches benötigt wird um die Debitorennummer auf dem Rechnungslayout anzeigen zu lassen (siehe auch KV 2903)</description>
        <formula>SomDig_Debitorennr_formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hilfsfeld, welches benötigt wird um die Debitorennummer auf dem Rechnungslayout anzeigen zu lassen. Wird automatisch per Formel befüllt. Da man im Mapping BA jedes Feld nur einmal Mappen kann.</inlineHelpText>
        <label>DebitorennrHelp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Debitorennr__c</fullName>
        <description>Aus dem Objekt externe Id&apos;s wird je nach Auftragstyp die richtige Debitorennummer übernommen.</description>
        <inlineHelpText>Je nach Auftragstyp wird hier die Debitorennummer des Accounts, welcher als Rechnungsempfänger mit dieser Mediakampagne verbunden ist eingetragen.</inlineHelpText>
        <label>Debitorennr</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Debitorennr_formula__c</fullName>
        <formula>IF(ADvendio__Pricelist__r.SomDig_AuftragstypId__r.Name = &apos;Barter&apos;, ADvendio__invoice_recipient__r.SomDig_DebitorennrBarter__c , ADvendio__invoice_recipient__r.SomDig_Debitorennr__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Debitorennr</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_DescriptionAutomated__c</fullName>
        <formula>IF( 
OR(CONTAINS(ADvendio__Pricelist__r.Name, &quot;Performance&quot;), ADvendio__Pricelist__r.SomDig_AuftragstypId__r.Name = &quot;Performance&quot;), 
&quot;-Die Kampagnen unterliegen dem jederzeitigen Schiebe- und Stornorecht seitens der 71M. Die 71M behält sich ein Vetorecht bei der Auswahl der Kampagnen vor, insbesondere wenn die Gestaltung keine klare Klick /Abverkaufsorientierung erkennen lässt bzw. ein Brandingeffekt im Vordergrund steht. Es besteht keine Garantie auf gleichmäßige Auslieferung über den vereinbarten Schaltungszeitraum. Die vollständige Auslieferung der AI&apos;s wird nicht garantiert. Die Abrechnung erfolgt an Hand der tatsächlich ausgelieferten AI&apos;s. Das Reporting der 71M ist maßgebend.&quot; &amp; BR(), 
&quot;&quot;) &amp; 

IF(SomDig_AnzahlNaturalrabattPositionen__c &gt; 0, 
&quot;-Bei der Gewährung von NR gilt die gebuchte Medialeistung als erfüllt, wenn die Summe aus bezahlter Position und NR Position dem gesamthaft gebuchten Mediavolumen entspricht.&quot; &amp; BR(), 
&quot;&quot;) &amp; 

IF(ISPICKVAL(ADvendio__invoice_recipient__r.P7S1_Steuerkennzeichen__c, &quot;AE&quot;), 
&quot;-Hiermit weisen wir auf die Anwendung des Reverse Charge Verfahren hin. Daher wird keine MwSt. ausgewiesen.&quot;, 
&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description (automated)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_DescriptionManual__c</fullName>
        <inlineHelpText>Tragen Sie eine Beschreibung der Mediakampagne ein. Diese Beschreibung wir auch auf dem Angebot unter Notizen angezeigt.</inlineHelpText>
        <label>Description (manual)</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SomDig_DienstleistungbezogeneHelp__c</fullName>
        <description>Hilfsfeld zur Ermittlung der PriorValue (bitte NICHT LÖSCHEN); wird per Trigger befüllt</description>
        <label>Dienstleistungbezogene Positionen Help</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_DienstleistungbezogenePositionen__c</fullName>
        <description>Hilfsfeld; zeigt wie viele LI hängen zusammen mit einem &quot;DienstleistungsLI&quot;; wird benutzt um zu verhindern, daß eine MK zum Auftrag wird ohne, daß DienstleistunsLI angelegt ist</description>
        <inlineHelpText>zeigt wie viele LI hängen zusammen mit einem &quot;DienstleistungsLI&quot;</inlineHelpText>
        <label>Dienstleistungbezogene Positionen</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.SomDig_Produktion_Erforderlich__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_DienstleistungspositionenHelp__c</fullName>
        <description>Hilfsfeld zur Ermittlung der PriorValue (bitte NICHT LÖSCHEN); wird per Trigger befüllt</description>
        <label>Dienstleistungspositionen Help</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_Dienstleistungspositionen__c</fullName>
        <description>zeigt die Anzahl von Dienstleistungsrelevanten LIs, von Werbeformen, die intern produziert werden; wird benutzt um zu verhindern, daß eine MK zum Auftrag wird, ohne, daß Dien</description>
        <inlineHelpText>zeigt die Anzahl von Dienstleistungsrelevanten LIs, von Werbeformen, die intern produziert werden</inlineHelpText>
        <label>Dienstleistungspositionen</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.SomDig_Werbeform__c</field>
            <operation>contains</operation>
            <value>Motiverstellung</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_GesamtrabattKonsekutivMaxCi__c</fullName>
        <label>SomDig_GesamtrabattKonsekutivMaxCi</label>
        <summarizedField>ADvendio__Campaign_Item__c.SomDig_GesamtrabattKonsekutivHelp__c</summarizedField>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_GesamtrabattKonsekutiv__c</fullName>
        <description>AR und KR konsekutiv zusammengerechnet</description>
        <formula>MAX(SomDig_Kundenrabatt_InPage__c,SomDig_Kundenrabatt_InStream__c)+SomDig_Agenturrabatt__c-MAX(SomDig_Kundenrabatt_InPage__c,SomDig_Kundenrabatt_InStream__c)*SomDig_Agenturrabatt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>AR und KR konsekutiv zusammengerechnet</inlineHelpText>
        <label>Gesamtrabatt Konsekutiv</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_GutschriftPerformance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prozess: Keine Rechnungsstellung und daher keine Weiterleitung an SAP; Performance-Partner sendet Gutschrift an Buchhaltung sowie Verteilung der Leistungsdaten an Yield; anschließende manuelle Verteilung auf die einzelnen Werbeträger in SAP und in der MediaKampagne.</description>
        <inlineHelpText>Keine Rechnungsstellung und Weitergabe an SAP via Buchungstool, daher wird &quot;Abzurechnen?&quot; per Workflow auf &apos;falsch&apos; gesetzt (wird von der Abteilung Yield genutzt, hieß im alten Buchungstool &quot;Gutschrift (Affiliate)&quot;) Wird auch für AdAudiance genutzt.</inlineHelpText>
        <label>Gutschrift</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Inhaber_Kuerzel__c</fullName>
        <description>Datensatz Inhaber / User alias; wird in PAM-Cockpit verwendet</description>
        <formula>Owner:User.Alias</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Benutzer alias</inlineHelpText>
        <label>Inhaber-Kürzel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_InvoicesReviewed__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Anzahl freigegebene Rechnungen. Wenn &gt; 0 kann Kampagne inkl. Positionen nicht verändert werden. (Gefüllt durch Trigger)</description>
        <inlineHelpText>Anzahl freigegebene Rechnungen. Wenn &gt; 0 kann Kampagne inkl. Positionen nicht verändert werden.</inlineHelpText>
        <label>Anzahl freigegebene Rechnungen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_IsRiskCount__c</fullName>
        <label>Is@Risk Count</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.SomDig_PositionStatus__c</field>
            <operation>equals</operation>
            <value>Auslieferung-@Risk</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_IsRiskStatus__c</fullName>
        <formula>IF(SomDig_IsRiskCount__c&gt;=1, IMAGE(&quot;/resource/Screenshot_not_sent&quot;, &quot;@risk&quot;),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>@risk</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Konvergenz__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wird manuell gefüllt, Automatismus aktuell nicht möglich. Anforderung SomDig Controlling</description>
        <inlineHelpText>Ist diese Mediakampagne eine Konvergente, d.h. gibt es im TV einen weiteren Teil zu dieser Kampagne (aus Agentursicht) mit derselben Werbebotschaft? Bitte manuell befüllen, wenn es sich um eine konvergente Kampagne handelt.</inlineHelpText>
        <label>Konvergenz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Kundenrabatt_InPage__c</fullName>
        <description>Kundenrabatt-InPage gesamt</description>
        <inlineHelpText>Kundenrabatt-InPage gesamt</inlineHelpText>
        <label>Kundenrabatt-InPage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Kundenrabatt_InStream__c</fullName>
        <description>Kundenrabatt-InStream gesamt</description>
        <inlineHelpText>Kundenrabatt-InStream gesamt</inlineHelpText>
        <label>Kundenrabatt-InStream</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_LetzterPositionEnde__c</fullName>
        <description>Datumanzeige der Position, die als letztes geendet ist/wird per trigger befüllt; im PAM Cockpit angezeigt</description>
        <inlineHelpText>Datumanzeige der Position, die als letztes geendet ist</inlineHelpText>
        <label>Letzter Position-Ende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SomDig_LinkZurMediakampagneInDFP__c</fullName>
        <description>Link zum DFP</description>
        <formula>IF(
NOT(ISBLANK(SomDig_AdServerOrderId__c)),
HYPERLINK(&quot; https://www.google.com/dfp/5731#delivery/OrderDetail/orderId=&quot;&amp; SomDig_AdServerOrderId__c, SomDig_AdServerOrderId__c,
 &quot;&quot;),NULL
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link zum DFP</inlineHelpText>
        <label>Link zur Mediakampagne in DFP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_MasterMediaCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Feld wird autom. befüllt bei Auftragssplitt mit Info/LookUp der Ursprungskampagne</description>
        <inlineHelpText>Feld wird autom. befüllt bei Auftragssplitt mit Info/LookUp der Ursprungskampagne</inlineHelpText>
        <label>Master-Media Campaign</label>
        <referenceTo>ADvendio__MediaCampaign__c</referenceTo>
        <relationshipLabel>Mediakampagnen</relationshipLabel>
        <relationshipName>Mediakampagnen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_Mn3__c</fullName>
        <description>MN2-Wert minus Skonto (wenn ein Skonto für die Mediakampagne ausgewählt wurde) ergibt MN3</description>
        <formula>ADvendio__Amount_net3__c * (1 -  SomDig_Zahlungsbedingung__r.SomDig_Skontowert__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>MN2-Wert minus Skonto (wenn ein Skonto für die Mediakampagne ausgewählt wurde) ergibt MN3</inlineHelpText>
        <label>MN3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SomDig_Naturalrabatt_Inpage__c</fullName>
        <description>Naturalrabatt-Inpage gesamt</description>
        <inlineHelpText>Naturalrabatt-Inpage gesamt</inlineHelpText>
        <label>Naturalrabatt-Inpage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_NotApprovedPositons__c</fullName>
        <description>KV 01741. Hilfsfeld auf dem eine Validierungsregel läuft. Hier steht die Anzahl der Position drin, bei denen der Mindestpreis noch nicht genehmigt ist.</description>
        <label>Nicht genehmigte Positionen</label>
        <summaryFilterItems>
            <field>ADvendio__Campaign_Item__c.SomDig_MindestpreisTKPunterschritten__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_PAMKommentar2__c</fullName>
        <description>wird von PAMs für Tagging benutzt; Hilfsfeld, im PAM Cockpit verwendet</description>
        <inlineHelpText>Dieses Feld dient zur internen Beschreibung durch den PAM und wird an den AdServer übergeben</inlineHelpText>
        <label>PAM Kommentar</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_PAMKommentar__c</fullName>
        <description>wird von PAMs für Tagging benutzt; wird in Detail Page angezeigt (Auftrags-Layout)</description>
        <inlineHelpText>Dieses Feld dient zur interenen Beschreibung durch den PAM und wird an den AdServer übergeben</inlineHelpText>
        <label>PAM Kommentar</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SomDig_PAMStatusFlag__c</fullName>
        <description>Flag abhängig von PAM Status</description>
        <formula>CASE(SomDig_StatusPAMCockpit__c , 
&quot;neu&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000001p0Yc&quot;, &quot;neu&quot;), 
&quot;planmässig&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000001p0Yh&quot;, &quot;in Aktion&quot;), 
&quot;abgeschlossen&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000001p0Yo&quot;, &quot;beendet&quot;), 
&quot;to do&quot;, IMAGE(&quot;/servlet/servlet.FileDownload?file=015D0000001p0YX&quot;, &quot;to do&quot;), 
null 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>neu-gelb 
to do-rot 
planmässig-grün 
abgeschlossen-grau 
non adserver-kein flag</inlineHelpText>
        <label>PAM Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_ProDiaAuftragsnr__c</fullName>
        <description>Auftragsnummer aus ProDia, welche im Rahmen des Kampagnenumzugs erfasst wird</description>
        <inlineHelpText>Auftragsnummer aus ProDia, welche im Rahmen des Kampagnenumzugs erfasst wird</inlineHelpText>
        <label>ProDia-Auftragsnr.</label>
        <length>11</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SomDig_ProfilBillingBI__c</fullName>
        <formula>$Profile.Name = &apos;SomDig_Billing&apos; || $Profile.Name = &apos;SomDig_BI&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SomDig_ProfilBillingBI</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_ProfilPamBilling__c</fullName>
        <formula>$Profile.Name = &apos;SomDig_Billing&apos; || $Profile.Name = &apos;SomDig_PAM&apos; || $Profile.Name = &apos;SomDig_BI&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SomDig_ProfilPamBilling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_ProgrammaticGuaranteed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox zur Auswertung von Programmatic Guaranteed Mediakampagnen (Ticket 05985)</description>
        <inlineHelpText>Checkbox zur Auswertung von Programmatic Guaranteed Mediakampagnen</inlineHelpText>
        <label>Programmatic Guaranteed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_RabattStufe__c</fullName>
        <description>Ermittelt die Genehmigungsstufe für Rabattfreigabe</description>
        <formula>IF (
  ADvendio__Pricelist__r.SomDig_AuftragstypId__r.Name != &apos;Standard&apos;
  ||
  (  SomDig_Kundenrabatt_InPage__c &lt; 0.65
  &amp;&amp; SomDig_Kundenrabatt_InStream__c &lt; 0.65
  &amp;&amp; SomDig_Sonderrabatt_InPage__c &lt; 0.65
  &amp;&amp; SomDig_Sonderrabatt_InStream__c &lt; 0.65
  &amp;&amp; SomDig_Agenturrabatt__c &lt; 0.65
  &amp;&amp; SomDig_GesamtrabattKonsekutivMaxCi__c &lt; 0.65
  ),

  0,

  IF (
    SomDig_Kundenrabatt_InPage__c &gt;= 0.69
    || SomDig_Kundenrabatt_InStream__c &gt;= 0.69
    || SomDig_Sonderrabatt_InPage__c &gt;= 0.69
    || SomDig_Sonderrabatt_InStream__c &gt;= 0.69
    || SomDig_Agenturrabatt__c &gt;= 0.69
    || SomDig_GesamtrabattKonsekutivMaxCi__c &gt;= 0.69,

    2,

    1
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ermittelt die Genehmigungsstufe für Rabattfreigabe</inlineHelpText>
        <label>Rabatt-Stufe</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_RabatteMKgenehmigt__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Hilfsfeld; wenn belegt - dann sind die Rabatte genehmigt; kann vom Pagelayout entfernt werden</description>
        <inlineHelpText>Hilfsfeld; wenn belegt - dann sind die Rabatte genehmigt</inlineHelpText>
        <label>Rabatte MK genehmigt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_RabatteNichtFreigegeben__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hilfsfeld, befüllt als Outcome vom Rabatt-Genehmigungsprozess; Zugriff nur für Admins; dient zur Steuerung von RTs und/oder Wasserzeichen in Angeboten.</description>
        <inlineHelpText>Hilfsfeld, befüllt als Outcome vom Rabatt-Genehmigungsprozess; schaltet automatisch zwischen freigegebenen und nicht freigegebenen Datensatztypen; Dokumenterstellung für &apos;nicht-freigegebene&apos; MKs nicht möglich!</inlineHelpText>
        <label>Rabatte nicht freigegeben</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Restwerbezeit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restwerbezeit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_SACConceptionManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ist an diesem Angebot/Auftrag ein SAC/Conception Manager beteilt?
Hier kann der jeweilige SAC /CM verknüpft werden.</description>
        <inlineHelpText>Ist an diesem Angebot/Auftrag ein SAC/Conception Manager beteilt?
Hier kann der jeweilige SAC /CM verknüpft werden.</inlineHelpText>
        <label>SAC/Conception Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mediakampagnen</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomDig_ScreenshotFlag__c</fullName>
        <description>signalisiert ob die Screenshots für alle darunter liegende LIs versendet sind; erscheint in VF-page als &quot;Screenshot versendet&quot;</description>
        <formula>IF(
AND(SomDig_AnzahlAdServerLI__c &gt; 0, SomDig_AnzahlAdServerLI__c = SomDig_AnzahlScreenshots__c),
IMAGE(&quot;/resource/Screenshot_sent&quot;, &quot;OK&quot;),
IMAGE(&quot;/resource/Screenshot_not_sent&quot;, &quot;to do&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>signalisiert ob die Screenshots für alle darunter liegende LIs versendet sind</inlineHelpText>
        <label>Screenshot Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Sonderrabatt_InPage__c</fullName>
        <description>Sonderrabatt-InPage gesamt</description>
        <inlineHelpText>Sonderrabatt-InPage gesamt</inlineHelpText>
        <label>Sonderrabatt-InPage</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Sonderrabatt_InStream__c</fullName>
        <description>Sonderrabatt-InStream gesamt</description>
        <inlineHelpText>Sonderrabatt-InStream gesamt</inlineHelpText>
        <label>Sonderrabatt-InStream</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SomDig_Stage__c</fullName>
        <description>für DWH Export muss deutscher Wert bereit gestellt werden, das Daten über API ausgelesen immer den englischen Wert liefern</description>
        <formula>CASE( TEXT(ADvendio__Stage__c), 
&apos;First contact&apos;, &apos;Potenzial&apos;, 
&apos;Stage 25%&apos;, &apos;Allgemeines Angebot&apos;, 
&apos;Offer on Request&apos;, &apos;Konkretes Angebot&apos;, 
&apos;Stage 75%&apos;, &apos;Kunde ist sehr interessiert&apos;, 
&apos;Stage 90%&apos;, &apos;Hot deal&apos;, 
&apos;Offer denied&apos;, &apos;Geschlossen &amp; abgelehnt&apos;, 
&apos;booked&apos;, &apos;Geschlossen &amp; gewonnen&apos;, 
TEXT(ADvendio__Stage__c) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>für DWH Export muss deutscher Wert bereit gestellt werden, das Daten über API ausgelesen immer den englischen Wert liefern</inlineHelpText>
        <label>Phase (DWH)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_StatusPAMCockpit__c</fullName>
        <description>beschreibt die Phase nach dem eine MK gebucht ist, bzw. die ownership von SALES zu PAM gewechselt hat.</description>
        <inlineHelpText>neu: keine LIs angelegt
to do: Mindestens EINE Position steht auf Entwurf, Pausiert, -erfüllt o. -unterliefert
planmässig: ALLE haben den Status Bereit o. Auslieferung
abgeschlossen: ALLE beendet und abgerechnet
NonAdserver: ALLE NonAdServer Produkte</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>neu</fullName>
                </value>
                <value>
                    <fullName>planmässig</fullName>
                </value>
                <value>
                    <fullName>to do</fullName>
                </value>
                <value>
                    <fullName>abgeschlossen</fullName>
                </value>
                <value>
                    <fullName>Non AdServer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SomDig_SumReviewedAndInvoicedInvoices__c</fullName>
        <description>KV 03672. Anzahl fakturierter und freigegebener Rechnungen.</description>
        <inlineHelpText>Anzahl fakturierter und freigegebener Rechnungen.</inlineHelpText>
        <label>Sum Reviewed and Invoiced Invoices</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SomDig_SummeAusgelieferteAIs__c</fullName>
        <description>Summe AIs aller LineItems.
Internes Hilfsfeld für Validierung &quot;SomDig_Stornierung&quot;</description>
        <inlineHelpText>Summe AIs aller LineItems.
Internes Hilfsfeld für Validierung &quot;SomDig_Stornierung&quot;</inlineHelpText>
        <label>Summe ausgelieferte AIs</label>
        <summarizedField>ADvendio__Campaign_Item__c.ADvendio__Delivered_Impressions__c</summarizedField>
        <summaryForeignKey>ADvendio__Campaign_Item__c.ADvendio__Media_Campaign__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SomDig_TempTicket4875__c</fullName>
        <description>liegt Accountteam-Freigabe für 71M vor?</description>
        <formula>ADvendio__Account__r.P7S1_Unit__c + &apos; &apos; + ADvendio__Account__r.P7S1_UnitSharing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>liegt Accountteam-Freigabe für 71M vor?</inlineHelpText>
        <label>SomDig_TempTicket4875</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Top1Wirtschaftsbereich__c</fullName>
        <description>Übernimmt automatisch den Wert, welcher am Account des Werbetreibenden im Feld &quot;Top1 Wirtschaftsbereich&quot; gepflegt wurde</description>
        <formula>ADvendio__Account__r.SomTv_Top1Wirtschaftsbereich__r.Name</formula>
        <inlineHelpText>Übernimmt automatisch den Wert, welcher am Account des Werbetreibenden im Feld &quot;Top1 Wirtschaftsbereich&quot; gepflegt wurde</inlineHelpText>
        <label>Top1 Wirtschaftsbereich</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomDig_Ueberbuchen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wenn durch Super User gesetzt, erlaubt es eine Buchung trotz nicht ausreichender Verfügbarkeit.</description>
        <inlineHelpText>Wenn durch Super User gesetzt, erlaubt es eine Buchung trotz nicht ausreichender Verfügbarkeit.</inlineHelpText>
        <label>Überbuchen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_VATExempt__c</fullName>
        <description>MwSt Befreiung liegt vor, wenn Debitor nicht das Steuerkennzeichen AS besitzt.</description>
        <formula>IF ( TEXT(ADvendio__invoice_recipient__r.P7S1_Steuerkennzeichen__c) =&apos;AS&apos;, 
false, 
true 
)</formula>
        <inlineHelpText>MwSt Befreiung liegt vor, wenn Debitor nicht das Steuerkennzeichen AS besitzt.</inlineHelpText>
        <label>MwSt befreit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_Verfuegbarkeitsrelevant__c</fullName>
        <description>Benötigt für KV 02429. An diesem Feld erkennt man, ob die Mediakampagne für die Verfügbarkeitsabfrage relevant ist.</description>
        <formula>ADvendio__Pricelist__r.SomDig_AuftragstypId__r.SomDig_Verfuegbarkeitsrelevant__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verfügbarkeitsrelevant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomDig_WtAgBeziehung__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Statt WT und AG wird die Beziehung hier ausgewählt. Infofelder WT und AG von ADvendio  füllen sich dann automatisch per Trigger (siehe KV 1254)</description>
        <inlineHelpText>Statt WT und AG wird die Beziehung hier ausgewählt. Infofelder WT und AG füllen sich dann automatisch</inlineHelpText>
        <label>WT AG Beziehung</label>
        <referenceTo>SomDig_WtAgBeziehung__c</referenceTo>
        <relationshipLabel>Mediakampagnen</relationshipLabel>
        <relationshipName>Mediakampagnen</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>